--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -5,7 +5,7 @@
  */
 
 /* Styles for desktops and laptops */
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 700px) {
     nav {
         width: calc(100% - 34px);
         max-width: 1300px;
@@ -47,12 +47,12 @@
 
         h2:hover {
             cursor: pointer;
-            color: #ff0000;
+            color: rgb(20, 109, 168);
             scale: 1.05;
         }
 
         h2:active {
-            color: #ff0000;
+            color: rgb(20, 109, 168);
             scale: 0.9;
         }
 
@@ -69,19 +69,118 @@
             border-radius: 100%;
             scale: 1.05;
 
-            // Because of filter, they become red
-            border: 1px solid turquoise;
-            background-color: turquoise;
+            // Because of filter, they become rgb(20, 109, 168)
+            background-color: rgb(235, 146, 87);
         }
 
         img:active {
             scale: 0.9;
         }
+
+        .mobile-nav-button {
+            display: none;
+        }
     }
 }
 
-/* Styles for tablets */
-@media only screen and (min-width: 768px) and (max-width: 1024px) {}
 
 /* Styles for mobile phones */
-@media only screen and (max-width: 768px) {}
+@media only screen and (max-width: 700px) {
+    nav {
+        margin-top: 10px;
+        overflow: hidden;
+    }
+
+    .mobile-nav-button {
+        filter: invert(1);
+        height: 40px;
+        margin-left: 13px;
+    }
+
+    .mobile-flex-btn-title {
+        display: flex;
+        justify-content: space-between;
+
+        width: auto;
+
+        h1 {
+            margin-top: 7px;
+            font-weight: 500;
+            margin-right: 10px;
+        }
+    }
+
+    .mobile-social-buttons {
+        filter: invert(1);
+    }
+
+    #mobile-buttons-display {
+        display: none;
+        justify-content: center;
+        margin-top: 15px;
+
+        h2 {
+            margin: 5px;
+            font-size: 20px;
+            transition: all 0.1s ease-in-out;
+        }
+
+        h2:active {
+            color: rgb(20, 109, 168);
+        }
+
+        width: 90vw;
+        margin-left: 3.3vw;
+        padding: 1vw;
+        border-radius: 6px;
+        height: 40px;
+
+        border: 1px solid white;
+
+        background-color: rgb(0, 0, 0);
+    }
+
+    .mobile-social-buttons {
+        height: 30px;
+        margin: 7px;
+        transition: all 0.1s ease-in-out;
+    }
+
+    .mobile-social-buttons:active {
+        background-color: rgb(235, 146, 87);
+        border-radius: 100%;
+    }
+
+    #mobile-socials-display {
+        margin-left: 3.3vw;
+        width: 90vw;
+        padding: 1vw;
+        border-radius: 6px;
+        height: 40px;
+
+        border: 1px solid white;
+
+        background-color: rgb(0, 0, 0);
+        margin-top: 10px;
+
+        display: none;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+nav {
+    animation: nav-fadeIn 1s ease-in-out;
+}
+
+@keyframes nav-fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
