--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,13 +19,17 @@
     z-index: 1;
 }
 
+body,
+html,
 canvas {
-    position: absolute;
+    height: 100%;
+}
+
+canvas {
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 0;
-    //filter: blur(1px);
-    height: auto !important;
 }
 
 body {
@@ -35,6 +39,7 @@ body {
     display: flex;
     height: auto;
     overflow-x: hidden;
+    height: fit-content;
 }
 
 iframe {
